+ Создан класс http-клиента + Исправлен баг библиотеки NSwagg - в качестве возврата - класс + Создан массив публичных путей
