# Game.WebApi/Services/Users/Dto/TokenDto.cs
@@ -1,0 +1,8 @@
+﻿namespace GameApp.WebApi.Services.Users.Dto
+{
+    public class TokenDto
+    {
+        public string Token { get; set; }
+        public DateTime Expires { get; set; }
+    }
+}
